# anomaly_detection

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.py  data.py  model.py  pyproject.toml  requirements.txt  train.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: baseline-comparison.md
src/anomaly_detection/: __init__.py  cli.py  config.py
src/anomaly_detection/input/: __init__.py  io.py  simulate.py
src/anomaly_detection/output/: __init__.py  alerts.py  evaluate.py  inference.py
src/anomaly_detection/process/: __init__.py  model.py  preprocess.py  train.py
tests/: conftest.py  test_alerts.py  test_cli.py  test_config.py  test_evaluate.py  test_import_isolation.py  test_inference.py  test_io.py  test_model.py  test_preprocess.py  test_simulate.py
