[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anomaly-detection"
version = "0.2.0"
description = "LSTM-based time-series anomaly detection on simulated corporate data"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "MAY2704" }]
keywords = ["anomaly-detection", "lstm", "time-series", "keras", "tensorflow"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy>=1.25.0",
  "pandas>=2.1.0",
  "scikit-learn>=1.3.0",
  "joblib>=1.3.0",
  "pyarrow>=14.0.0",
  "tensorflow>=2.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pandas-stubs>=2.1.0",
  "pre-commit>=3.5.0",
]

[project.scripts]
anomaly-detection = "anomaly_detection.cli:main"

[project.urls]
Homepage = "https://github.com/MAY2704/anomaly_detection"
Repository = "https://github.com/MAY2704/anomaly_detection"
Issues = "https://github.com/MAY2704/anomaly_detection/issues"
Changelog = "https://github.com/MAY2704/anomaly_detection/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/anomaly_detection"]

# --- Testing -----------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--import-mode=importlib",
]
markers = [
  "slow: requires TensorFlow or a full training run (deselect with '-m \"not slow\"')",
]
filterwarnings = [
  "error::DeprecationWarning:anomaly_detection.*",
]

[tool.coverage.run]
source = ["anomaly_detection"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

# --- Linting -----------------------------------------------------------------

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific
  "NPY",  # numpy-specific
  "PD",   # pandas-vet
  "D",    # pydocstyle
]
ignore = [
  "D104",  # missing docstring in public package
  "D107",  # __init__ docstring (documented at class level)
  "D203",  # incompatible with D211
  "D213",  # incompatible with D212
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# --- Type checking -----------------------------------------------------------

[tool.mypy]
# No `python_version` pin: numpy's bundled stubs use 3.12-only syntax that
# older parse targets reject. Ruff's `target-version = "py310"` is what
# enforces the floor stated in `requires-python`.
files = ["src"]
strict = false
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tensorflow.*", "keras.*", "sklearn.*", "joblib.*"]
ignore_missing_imports = true
